# henry_clase_demo

./: .dockerignore  .env.example  .gitignore  DEMO_GUIDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  langgraph.json  pyproject.toml  remove_emojis.py  test_agent_manual.py  test_complete_system.py
.streamlit/: config.toml
api/: __init__.py  main.py  middleware.py
api/cache/: __init__.py  query_cache.py
api/core/: __init__.py  config.py  errors.py  logger.py
api/middleware/: __init__.py  rate_limiter.py  request_logger.py  security_headers.py
api/routers/: __init__.py  agent.py  comparison.py  database.py  health.py  metrics.py
api/schemas/: __init__.py  agent.py  common.py  comparison.py  database.py
api/services/: __init__.py  agent_service.py  comparison_service.py  database_service.py
api/storage/: __init__.py  execution_store.py
dashboard/: app.py  design_system.py  history_manager.py
dashboard/components/: __init__.py  cards.py  charts.py  error_boundary.py  metrics.py
dashboard/pages/: 1_Live_Agent.py  2_Model_Comparison.py  3_Architecture.py  4_Analytics.py
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.tests
docs/: API.md  DEPLOYMENT.md
notebooks/: Cinema_ReAct_CoT_Analysis.ipynb  README.md  ReAct_Agent_Analysis.ipynb
scripts/: run_comparison.py  setup_database.py
src/: config.py
src/agents/: agent_executor.py  agent_factory.py  cot_agent.py  langgraph_entrypoints.py  langgraph_react_agent.py  react_agent.py  reasoning_validator.py  reflection_loop.py
src/comparison/: evaluator.py  metrics.py  test_cases.py
src/database/: db_manager.py  schema.py  seed_data.py
src/tools/: currency_tool.py  database_tool.py
tests/: conftest.py
tests/e2e/: test_api_integration.py  test_complete_workflow.py  test_cot_workflow.py
tests/integration/: test_api_agent.py  (+2 more)
(+7 files in other folders)
