[project]
name = "henry-clase-demo"
version = "0.1.0"
description = "AI Agent Demo with ReAct Framework - Pink Floyd Edition"
authors = [
    {name = "Carlos Daniel"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # AI/ML
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "openai>=1.12.0",

    # Database
    "sqlalchemy>=2.0.25",

    # Web/HTTP
    "httpx>=0.26.0",
    "requests>=2.31.0",

    # Dashboard
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.2.0",

    # FastAPI
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",

    # Code quality
    "ruff>=0.1.14",
    "black>=24.1.1",
    "mypy>=1.8.0",

    # Jupyter
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "nbformat>=5.9.2",

    # Visualization for notebooks
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "networkx>=3.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-v"
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
